loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:4: error: Unit does not take parameters
  do(avance()) {
               ^